# emodlib

./: .devcontainer.json  .gitignore  CMakeLists.txt  README.md  README.rst  pyproject.toml
.github/workflows/: docs.yml  notebooks.yml  pip.yml  wheels.yml
cmake/: VersionUtils.cmake
docs/: README.md  conf.py  emodlib.malaria.rst  emodlib.rst  index.rst  modules.rst  requirements.txt  tutorials.rst
docs/tutorials/: README.rst  config.yml  tut_challenge.ipynb  tut_intro.ipynb  tut_multihost.ipynb  tut_optuna.ipynb
examples/: antibody_evolution.py  config.yaml  naive_infection.py
include/emodlib/: CMakeLists.txt  ParamSet.h  version.hpp
include/emodlib/malaria/: CMakeLists.txt  IMalariaAntibody.h  InfectionMalaria.cpp  InfectionMalaria.h  IntrahostComponent.cpp  IntrahostComponent.h  Malaria.h  MalariaAntibody.cpp  MalariaAntibody.h  MalariaEnums.h  SusceptibilityMalaria.cpp  SusceptibilityMalaria.h
include/emodlib/utils/: CMakeLists.txt  Common.h  EnumSupport.h  RANDOM.cpp  RANDOM.h  Sigmoid.h  sse2neon.h  suids.cpp  suids.hpp
python/: CMakeLists.txt  README.md  README.rst  setup.py
python/emodlib/: __init__.py
python/emodlib/malaria/: __init__.py
python/src/: main.cpp  malaria.cpp
src/: main.cpp  malaria.cpp
src/emodlib/: __init__.py  params.py
src/emodlib/malaria/: __init__.py
test/: test_bindings.py  test_infection_clearance.py  test_max_infections.py
tests/: config.yml  test_bindings.py  test_host.py  test_infection.py  test_infection_clearance.py  test_max_infections.py  test_susceptibility.py
